# travelmanager

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPANY_CONTACTS_IMPLEMENTATION.md  Dockerfile  README.md  RELEASENOTES.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1f81bbd6d0da_add_email_templates.py  22f34dad53ce_add_user_profile_fields.py  297d4b88fbfc_add_cover_image_position_y_to_events.py  39501bd4d6c1_add_cover_image_fields_to_events.py  3a8f2c9d1e5b_add_company_contacts.py  4b7c3d8e2f1a_remove_legacy_expense_recipient.py  5407cda97a67_initial_tables.py  a28421a30ffa_simplify_event_status_to_three_values.py  cb63b9a8c1b4_add_location_and_photo_features_v02.py  d3cd5fec2518_add_paperless_custom_field_value_to_.py
frontend/: .gitignore  biome.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
scripts/: docker-backup.sh
src/: config.py  database.py  encryption.py  main.py  security.py
src/api/: deps.py
src/integrations/: __init__.py  base.py  immich.py  paperless.py  registry.py  smtp.py  unsplash.py
src/models/: __init__.py  base.py  company.py  company_contact.py  contact.py  email_template.py  enums.py  event.py  expense.py  integration_config.py  location_image.py  note.py  photo_reference.py  session.py  system_settings.py  todo.py  user.py
src/schemas/: __init__.py  auth.py  backup.py  common.py  company.py  company_contact.py  contact.py  email_template.py  event.py  expense.py  integration.py  location.py  note.py  photo.py  settings.py  todo.py  user.py
src/services/: __init__.py  auth_service.py  backup_encryption.py  backup_service.py  company_contact_service.py  company_service.py  email_template_service.py  event_service.py  integration_service.py  location_image_service.py  report_generator.py  settings_service.py
tests/: conftest.py
(+69 files in other folders)
