[project]
name = "travel-manager"
version = "0.1.1"
description = "Self-hosted business trip management with expense tracking and report generation"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "GPL-2.0-only"}

dependencies = [
    "fastapi>=0.122.0",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.44",
    "alembic>=1.17.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.20",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "python-slugify>=8.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
    "mypy>=1.19.0",
    "respx>=0.22.0",
    "pytest-asyncio>=1.3.0",
]
postgres = [
    "psycopg2-binary>=2.9.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",  # Allow Depends() in function defaults (FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__init__.py",
    "src/models/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
